# pai-os

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLA.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.agents/skills/paios-review/: SKILL.md
.cargo/: audit.toml  config.toml  device.local.toml.example
.claude/: settings.json
.claude/commands/: health.md  implement.md  review.md
.claude/output-styles/: concise.md
.claude/skills/paios-loop/: SKILL.md
.claude/skills/paios-review/: SKILL.md
.codex/: config.toml  hooks.json
.codex/rules/: paiOS.rules
.cursor/: mcp.json
.cursor/commands/: health.md  implement.md  review.md
.cursor/rules/: cursor-rules.mdc  cursor_rules.mdc  definition-of-done.mdc  docs-maintenance.mdc  github-issues-branches.mdc  philosophy.mdc  rust-engine-ci.mdc
.cursor/skills/paios-code-health/: SKILL.md
.cursor/skills/paios-implement/: SKILL.md
.cursor/skills/paios-loop/: SKILL.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  license-check.yml  os-build.yml  os-verify.yml  rustdoc.yml
.taskmaster/: config.json  config.json.example  loop-prompt.md  state.json
.taskmaster/scripts/: normalize_task_prompts.py  validate_tasks.py
api/: LICENSE
api/grpc/: service.proto
apps/: LICENSE  LICENSE-MIT
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/public/images/Architecture/: system-architecture.excalidraw
docs/scripts/: README.md  proto-doc-gen.mjs  rustdoc-gen.mjs  rustdoc-html.mjs  test-docs.mjs
docs/src/components/: AnalyticsInit.tsx  ExcalidrawViewer.astro  ExcalidrawViewer.tsx  Head.astro  Mermaid.astro  Search.astro
docs/src/content/docs/: glossary.mdx  index.mdx  roadmap.mdx
docs/src/content/docs/architecture/: c4-architecture.mdx  composition-root.mdx  index.mdx  layer-architecture.mdx  operating-system.mdx  security.mdx  workspace-and-build.mdx
docs/src/content/docs/architecture/adr/: 001-licensing-strategy.mdx  002-os-building-tool.mdx  003-update-system.mdx  004-system-architecture.mdx  005-runtime-language-selection.mdx  006-extension-architecture.mdx  007-project-management-strategy.mdx  008-workspace-architecture.mdx  009-ai-context-strategy.mdx  index.mdx
docs/src/content/docs/architecture/modules/: api.mdx  audio.mdx  common.mdx  core.mdx  index.mdx  inference.mdx  peripherals.mdx  vision.mdx
docs/src/content/docs/guides/: getting-started.mdx  index.mdx  licensing.mdx
docs/src/content/docs/guides/contributing/: ai-workflow.mdx  cla.mdx  dco.mdx  docs-maintenance.mdx  documentation.mdx  index.mdx  maintainers.mdx  model-integration.mdx  rust-style.mdx  standards.mdx  workflow.mdx
docs/src/content/docs/reference/: api.mdx  index.mdx
docs/src/content/docs/reference/rust/: index.mdx  runtime.mdx
docs/src/pages/reference/rustdoc/engine/: index.astro
docs/src/styles/: fullscreen-modal.css  theme.css
engine/: .gitattributes  .gitignore  Cargo.toml  deny.toml
engine/crates/api/: Cargo.toml
engine/crates/api/src/adapters/: mod.rs
engine/crates/api/src/domain/: mod.rs
engine/crates/api/src/ports/: mod.rs
engine/crates/audio/: Cargo.toml
engine/crates/audio/src/adapters/: mod.rs
engine/crates/audio/src/domain/: mod.rs
engine/crates/audio/src/ports/: mod.rs
engine/crates/common/: Cargo.toml
engine/crates/common/src/: lib.rs  logging.rs
engine/crates/common/src/adapters/: file_config.rs  mod.rs
engine/crates/common/src/domain/: error.rs  mod.rs
engine/crates/common/src/ports/: config.rs  mod.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: lib.rs
engine/crates/core/src/adapters/: hardcoded_flow_runner.rs  mod.rs
engine/crates/core/src/domain/: error.rs  event_bus.rs  events.rs  mod.rs  session_manager.rs  session_state.rs  state_machine.rs
engine/crates/core/src/flows/: interaction.rs  mod.rs
engine/crates/core/src/ports/: device_control.rs  flow_runner.rs  inference.rs  mod.rs  sensor_relay.rs  session_config.rs
engine/crates/core/src/types/: mod.rs
engine/crates/inference/: Cargo.toml
engine/crates/inference/src/: lib.rs
engine/crates/inference/src/adapters/: mod.rs
engine/crates/inference/src/domain/: mod.rs
engine/crates/inference/src/ports/: mod.rs
engine/crates/peripherals/: Cargo.toml
engine/crates/peripherals/src/adapters/: mod.rs
engine/crates/peripherals/src/domain/: mod.rs
engine/crates/peripherals/src/ports/: mod.rs
engine/crates/vision/: Cargo.toml
engine/crates/vision/src/: lib.rs
engine/crates/vision/src/adapters/: mod.rs
engine/crates/vision/src/domain/: mod.rs
engine/crates/vision/src/ports/: mod.rs
engine/pai-engine/: Cargo.toml
engine/pai-engine/src/: bootstrap.rs  main.rs
engine/proto/: service.proto
engine/src/: lib.rs  main.rs
extensions/: README.md
os/: README.md  build.sh  image.yaml
os/packaging/: .gitignore  build-deb.sh
os/packaging/pai-engine/debian/: changelog  control  install  pai-engine.postinst
os/packaging/pai-engine/lib/systemd/system/: pai-engine.service
os/recipes/: base-arm64.yaml
os/recipes/app/: pai-engine-arm64.yaml
os/recipes/app/overlays/pai-engine/: README.md
os/recipes/machines/: radxa-rock5c.yaml
os/recipes/machines/overlays/radxa-rock5c/bootloader/: README.md
os/recipes/machines/overlays/radxa-rock5c/etc/: fstab
os/recipes/machines/overlays/radxa-rock5c/etc/udev/rules.d/: 99-radxa-rock5c.rules
os/tests/: run-qemu.sh
scripts/dev/: loop_next_task.py  sync-paios-skills.sh
scripts/hooks/: agent_hooks.sh
todos/: 001-pending-p1-audit-log-pii-via-metadata.md  002-pending-p1-systemd-service-runs-as-root.md  003-pending-p2-no-knowledge-interface-impl-wiring.md  004-pending-p2-retrieve-context-no-vector-fts-in-manager.md  005-pending-p2-document-lifecycle-not-on-knowledge-interface.md  006-pending-p2-systemd-hardening.md  007-pending-p2-core-doc-lists-nonexistent-ports.md  008-pending-p2-knowledge-adapters-stub-and-test-profile.md  009-pending-p3-audit-memory-conversation-and-ids-docs.md  010-pending-p3-os-recipe-fstab-placeholders.md
