[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/audio",
    "crates/common",
    "crates/core",
    "crates/inference",
    "crates/peripherals",
    "crates/vision",
    "pai-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/aurintex/pai-os"

[workspace.dependencies]
# Error handling: thiserror in library crates, anyhow in the binary (pai-engine).
thiserror = "2"
anyhow    = "1.0"

# Logging & tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime — features set per crate (e.g. "full" vs "rt,macros,sync").
tokio      = "1.50"
tokio-util = "0.7"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml       = "0.9"

# Configuration management
config = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Internal crates
common      = { path = "crates/common" }
pai_core    = { package = "pai-core", path = "crates/core" }
vision      = { path = "crates/vision" }
audio       = { path = "crates/audio" }
inference   = { path = "crates/inference" }
api         = { path = "crates/api" }
peripherals = { path = "crates/peripherals" }

# Dev dependencies
tempfile   = "3"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code      = "deny"
unused_must_use  = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Panic policy (see docs/src/content/docs/guides/contributing/rust-style.mdx)
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
todo        = "deny"

# Correctness / pedantic subset
all                     = { level = "warn", priority = -1 }
correctness             = { level = "deny", priority = 1 }
suspicious              = { level = "deny", priority = 1 }
needless_collect        = "warn"
inefficient_to_string   = "warn"
mem_forget              = "deny"
explicit_into_iter_loop = "warn"

# Pragmatic allows
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
