[package]
name = "pai-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The core intelligence engine for paiOS."
repository.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "automation", "edge-ai", "platform"]
categories = ["artificial-intelligence", "embedded"]

[dependencies]
common      = { workspace = true }
pai_core    = { workspace = true }
vision      = { workspace = true, optional = true }
audio       = { workspace = true, optional = true }
inference   = { workspace = true, optional = true }
api         = { workspace = true, optional = true }
peripherals = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling: anyhow for app-level propagation and context (no typed API);
# domain crates use thiserror for their error types.
anyhow = { workspace = true }

# Logging & tracing — subscriber init is handled by common::logging::try_init.
tracing = { workspace = true }

# Configuration management
config = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["desktop"]

# Profile: Desktop development (the default)
desktop = [
    "vision_mock",
    "audio_cpal",
    "infer_llamacpp_cpu",
    "infer_sherpa",
    "periph_desktop",
    "api_grpc_uds",
    "api_http",
    "api_mcp_server",
]

# Profile: Rockchip-based deployment (e.g. Radxa Rock 5C / paiBox)
rockchip = [
    "vision_v4l2",
    "vision_rga",
    "audio_cpal",
    "audio_webrtc",
    "infer_rknn",
    "infer_rkllm",
    "infer_sherpa",
    "infer_mcp_client",
    "periph_gpio",
    "periph_evdev",
    "api_grpc_uds",
    "api_grpc_tcp",
    "api_http",
    "api_mcp_server",
    "core_sysinfo",
]

# Capability feature re-exports into domain crates.
# Optional deps: list crate name first to enable the dep, then the inner feature.

vision_v4l2  = ["vision", "vision/vision_v4l2"]
vision_rga   = ["vision", "vision/vision_rga"]
vision_image = ["vision", "vision/vision_image"]
vision_mock  = ["vision", "vision/vision_mock"]

audio_cpal   = ["audio", "audio/audio_cpal"]
audio_webrtc = ["audio", "audio/audio_webrtc"]
audio_mock   = ["audio", "audio/audio_mock"]

infer_llamacpp_cpu = ["inference", "inference/infer_llamacpp_cpu"]
infer_rknn         = ["inference", "inference/infer_rknn"]
infer_rkllm        = ["inference", "inference/infer_rkllm"]
infer_sherpa       = ["inference", "inference/infer_sherpa"]
infer_hailo        = ["inference", "inference/infer_hailo"]
infer_mcp_client   = ["inference", "inference/infer_mcp_client"]
infer_mock         = ["inference", "inference/infer_mock"]

api_grpc_uds  = ["api", "api/api_grpc_uds"]
api_grpc_tcp  = ["api", "api/api_grpc_tcp"]
api_http      = ["api", "api/api_http"]
api_mcp_server = ["api", "api/api_mcp_server"]
api_mock      = ["api", "api/api_mock"]

periph_desktop     = ["peripherals", "peripherals/periph_desktop"]
periph_desktop_hid = ["peripherals", "peripherals/periph_desktop_hid"]
periph_gpio        = ["peripherals", "peripherals/periph_gpio"]
periph_evdev       = ["peripherals", "peripherals/periph_evdev"]
periph_usb_hid     = ["peripherals", "peripherals/periph_usb_hid"]
periph_mock        = ["peripherals", "peripherals/periph_mock"]

# pai_core is a required dependency; only the inner feature is needed.
core_sysinfo = ["pai_core/core_sysinfo"]
core_mock    = ["pai_core/core_mock"]

[lints]
workspace = true
