[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "API gateway domain: gRPC, HTTP, and MCP server adapters."
repository.workspace = true

[dependencies]
common    = { workspace = true }
pai_core  = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
api_grpc_uds  = []
api_grpc_tcp  = []
api_http      = []
api_mcp_server = []
api_mock      = []

[lints]
workspace = true
