[package]
name = "audio"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Audio domain: capture, playback, and signal conditioning."
repository = "https://github.com/aurintex/pai-os"

[dependencies]
common = { path = "../common", version = "0.1.0" }
thiserror = "1.0"

[features]
default = []
audio_cpal = []
audio_webrtc = []
audio_mock = []

