[package]
name = "audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio domain: capture, playback, and signal conditioning."
repository.workspace = true

[dependencies]
common    = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
audio_cpal   = []
audio_webrtc = []
audio_mock   = []

[lints]
workspace = true
