[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Shared foundation: logging, error types, config, and permission contracts."
repository = "https://github.com/aurintex/pai-os"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
