[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared foundation: logging, error types, config, and permission contracts."
repository.workspace = true

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = { workspace = true }
thiserror          = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
