[package]
name = "pai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core orchestrator and engine domain logic."
repository.workspace = true

[dependencies]
common    = { workspace = true }
thiserror = { workspace = true }
tokio      = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tracing   = { workspace = true }

[features]
default = []
core_sysinfo = []
core_mock    = []

[lints]
workspace = true
