[package]
name = "inference"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Inference domain: LLMs, audio/vision ML backends, and tool execution."
repository = "https://github.com/aurintex/pai-os"

[dependencies]
common = { path = "../common", version = "0.1.0" }
thiserror = "2.0"

[features]
default = []
infer_llamacpp_cpu = []
infer_rknn = []
infer_rkllm = []
infer_sherpa = []
infer_hailo = []
infer_mcp_client = []
infer_mock = []

