[package]
name = "inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inference domain: LLMs, audio/vision ML backends, and tool execution."
repository.workspace = true

[dependencies]
common    = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
infer_llamacpp_cpu = []
infer_rknn         = []
infer_rkllm        = []
infer_sherpa       = []
infer_hailo        = []
infer_mcp_client   = []
infer_mock         = []

[lints]
workspace = true
