[package]
name = "peripherals"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Peripherals domain: HMI inputs/outputs (buttons, LEDs, haptics, HID)."
repository.workspace = true

[dependencies]
common    = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
periph_desktop     = []
periph_desktop_hid = []
periph_gpio        = []
periph_evdev       = []
periph_usb_hid     = []
periph_mock        = []

[lints]
workspace = true
