[package]
name = "vision"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Vision domain: camera capture and frame conditioning."
repository = "https://github.com/aurintex/pai-os"

[dependencies]
common = { path = "../common", version = "0.1.0" }
thiserror = "1.0"

[features]
default = []
vision_mock = []
vision_v4l2 = []
vision_rga = []
vision_image = []

