[package]
name = "vision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vision domain: camera capture and frame conditioning."
repository.workspace = true

[dependencies]
common    = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
vision_mock  = []
vision_v4l2  = []
vision_rga   = []
vision_image = []

[lints]
workspace = true
